# assignments-ma4502-S2019

./: .gitignore  01-introduction.ipynb  02-knapsack-solution.ipynb  02-knapsack.ipynb  03-christofides-solution.ipynb  03-christofides.ipynb  04-matching.ipynb  05-mtz-solution.ipynb  05-mtz.ipynb  06-subtours-solution.ipynb  06-subtours.ipynb  07-flow-extension-solution.ipynb  07-flow-extension.ipynb  README.md  pyproject.toml
gurobi/: 01-introduction.ipynb  02-assignment.ipynb  03-factory-planning-solution.ipynb  03-factory-planning.ipynb
gurobi/slides/: gurobi.html
tsplib/: bier20.tsp  ulysses7.tsp
tsplib95/: requirements_dev.txt
