[tool.poetry]
name = "assignments-ma4502-s2019"
version = "0.1.0"
description = "Assignments for MA4502, SS2019"
authors = ["Michael Ritter <michael.ritter@tum.de>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^0.35.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
